# septordle

./: .gitignore  main.py  pyproject.toml
